# ml_study

./: README.md  decision_tree.py  pyproject.toml  tokenizer.py
classification/: .gitignore  README.md  data.py  eda.py  linear.py  requirements.txt
classification/data/: sample_submission.csv  sample_test.csv  sample_train.csv
dim_reduction/: README.md  lda.py
trees/: README.md  gbm.py
