[tool.poetry]
name = "mst"
version = "0.1.0"
description = "Personal package for study"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
datasets = "^2.20.0"
py7zr = "^0.21.0"
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
transformers = "^4.41.2"
tokenizers = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
